# ReMind-Me

./: Algorithms.cs  CMakeCache.txt  CMakeLists.txt  Constants.cs  DateManager.cs  Design.txt  FlatFileManager.cs  InputManager.cs  InterfaceManager.cs  InterfaceUtils.cs  Program.cs  README.md  Settings.cs  TaskInstance.cs  TaskUtils.cs  UserManager.cs  reMind me.csproj
